@@ -415,9 +415,6 @@ my %software_config = (
         installed => q_version('cpanm'),
         update    => \&cpanm_update,
     },
-    dmenu => {
-        with_guix_config('dmenu'),
-    },
     eclim => {
         install   => \&eclim_install,
         installed => query_noerr('eclimd', '-version'),
@@ -479,6 +476,9 @@ my %software_config = (
     },
     recutils => {
         with_guix_config('recutils'),
+    },
+    rofi => {
+        with_guix_config('rofi'),
     },
     ruby_stable => {
         with_guix_config('ruby'),
